Update routing path to include /message

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -8,7 +8,7 @@ spring:
         - id: user-service
           uri: lb://user-service
           predicates:
-            - Path=/users/**
+            - Path=/message
 
 eureka:
   client:
