--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -6,7 +6,7 @@ spring:
     gateway:
       routes:
         - id: user-service
-          uri: lb://user-service
+          uri: http://localhost:8081
           predicates:
             - Path=/users/**
           filters:
