--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -2,15 +2,19 @@ server:
   port: 8083
 
 spring:
+  application:
+    name: api-gateway
+
   cloud:
     gateway:
       routes:
         - id: user-service
-          uri: http://localhost:8081
+          uri: lb://user-service
           predicates:
             - Path=/users/**
           filters:
             - StripPrefix=1
+
 eureka:
   client:
     service-url:
