--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -9,7 +9,7 @@ spring:
     gateway:
       routes:
         - id: user-service
-          uri: lb://user-service
+          uri: lb://USER-SERVICE
           predicates:
             - Path=/users/**
           filters:
