--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -19,6 +19,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
