--- a/user-service.yml
+++ b/user-service.yml
@@ -9,5 +9,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
 custom:
   message: "Hello JAYASREE"
