--- a/user-service.yml
+++ b/user-service.yml
@@ -4,7 +4,12 @@ server:
 spring:
   application:
     name: user-service
-
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 eureka:
   client:
     service-url:
